ajout des coordonnées dans le fichier hero.php, ajout des liens nav dans le footer, et correction du menu burger en version mobile pour que tous les liens apparaissent

--- a/sass/layout/_entete.scss
+++ b/sass/layout/_entete.scss
@@ -30,6 +30,7 @@
       right: 0;
       background-color: white;
       width: 100%;
+      padding-top: 50px;
     }
     align-items: center;
     gap: 0 30px;
