--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -45,6 +45,14 @@ footer{
             justify-items: center;
         }
     }
+    &__s2 {
+        padding: 1.5em;
+        justify-items: center;
+
+        li {
+            padding: 10px;
+        }
+    }
 }
 
 .piedpage h2 {
